# Peril

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: config.cpp  main.cpp  state_manager.cpp  test_state.cpp
src/include/: common_main.h  state_manager.h
src/include/states/: config.h  test_state.h
